apps/rustbin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustbin
  namespace: rustbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rustbin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rustbin
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: sqlite:///data/rustbin.db?mode=rwc
          image: ghcr.io/whyredfire/rustbin:sha-75418bf
          livenessProbe:
            httpGet:
              path: /
              port: http
          name: rustbin
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /data
              name: data
      securityContext:
        fsGroup: 65532
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: rustbin-data
