apps/rustbin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustbin
  namespace: rustbin
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app.kubernetes.io/name: rustbin
