apps/rustbin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: rustbin
  namespace: rustbin
spec:
  hostnames:
    - bin.whyredfire.dev
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: rustbin
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
